--- a/nc-daily-newsy/src/App.css
+++ b/nc-daily-newsy/src/App.css
@@ -6,24 +6,30 @@
 
 .Title {
   grid-area: title;
-  background-color: salmon;
   text-align: center;
+  border: 4px solid red;
 }
 
 .NavBar {
   grid-area: navbar;
-  background-color: cadetblue;
-  text-align: right;
+  border: 4px solid yellow;
+  text-align: left;
 }
 
+.button {
+  font-size: 16px;
+}
 .Main {
   grid-area: main;
-  background-color: yellow;
+  border: 4px solid purple;
   text-align: center;
+}
+.singleArticle {
+  margin: 10px;
 }
 
 .Footer {
   grid-area: footer;
-  background-color: skyblue;
+  border: 4px solid green;
   text-align: center;
 }
