added functionality to vote on single article, through list of articles and by comment id

--- a/nc-daily-newsy/src/App.css
+++ b/nc-daily-newsy/src/App.css
@@ -56,3 +56,14 @@
 .commentDelete {
   margin: 10px;
 }
+
+.img {
+  max-width: 75px;
+  display: flex;
+  flex-direction: column-reverse;
+}
+
+.sign {
+  display: flex;
+  flex-direction: row;
+}
