--- a/nc-daily-newsy/src/App.css
+++ b/nc-daily-newsy/src/App.css
@@ -31,11 +31,13 @@
 }
 .singleArticle {
   margin: 10px;
+  padding: 5px;
   border: 4px solid grey;
 }
 
 .Comments {
   margin: 10px;
+  padding: 5px;
   border: 4px solid blue;
 }
 
@@ -66,4 +68,16 @@
 .sign {
   display: flex;
   flex-direction: row;
+}
+
+.form {
+  margin: 10px;
+}
+
+.Voter {
+  margin: 10px;
+}
+
+.commentLink {
+  display: inline;
 }
