--- a/nc-daily-newsy/src/App.css
+++ b/nc-daily-newsy/src/App.css
@@ -7,7 +7,7 @@
 .Title {
   grid-area: title;
   text-align: center;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  /* font-family: Verdana, Geneva, Tahoma, sans-serif; */
   /* border: 4px solid red; */
 }
 
@@ -20,8 +20,28 @@ h1 {
   color: black;
 }
 
+.articleInfo {
+  text-align: start;
+  padding-left: 30px;
+  padding-right: 30px;
+  padding-top: 20px;
+
+  text-decoration: none;
+  color: black;
+}
+
+h4 {
+  text-decoration: none;
+  text-align: start;
+  padding-left: 30px;
+  padding-right: 30px;
+  color: black;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
 header {
   background-color: rgb(2, 181, 175);
+  margin-bottom: 3px;
   /* margin-right: 50px;
   margin-left: 50px; */
 }
@@ -65,19 +85,27 @@ header {
   /* border: 4px solid green; */
   background-color: rgb(2, 181, 175);
   text-align: center;
+  margin-top: 20px;
 }
 .singleArticle {
-  margin: 10px;
-  padding: 5px;
-  border: 4px solid grey;
-  font-family: sans-serif Cursive;
-  text-align: center;
+  margin: 15px;
+  padding: 15px;
+  border: 1px solid grey;
+  border-radius: 3px;
+  /* font-family: sans-serif Cursive; */
+  text-align: left;
 }
 
 .Comments {
-  margin: 10px;
-  padding: 5px;
-  border: 4px solid blue;
+  margin-left: 40px;
+  margin-right: 40px;
+  margin-top: 25px;
+  margin-bottom: 10px;
+  padding: 15px;
+  border: 1px solid grey;
+  border-radius: 3px;
+  /* font-family: sans-serif Cursive; */
+  text-align: left;
 }
 
 .Article {
@@ -92,22 +120,19 @@ header {
 }
 
 .Input {
-  font-size: large;
-  height: 30px;
+  margin-left: 10px;
+  border: 1px solid rgb(2, 181, 175);
 }
 
 .button {
   font-size: large;
 }
 
-.commentDelete {
-  margin: 10px;
-}
-
 .img {
   max-width: 75px;
   display: flex;
   flex-direction: column-reverse;
+  margin-left: 10px;
 }
 
 .sign {
@@ -116,13 +141,170 @@ header {
 }
 
 .form {
-  margin: 10px;
+  margin: 15px;
+  display: flex;
+}
+
+.voterWrapper {
+  /* -ms-flex-align: center; */
+  align-items: center;
+  box-sizing: border-box;
+  /* display: -ms-flexbox; */
+  display: flex;
+  /* -ms-flex-direction: column; */
+  flex-direction: row-reverse;
+  /* padding-bottom: 150px; */
+  /* position: absolute; */
+  /* padding: 8px 4px 8px 0; */
+  /* height: 100%;
+  left: 0;
+  padding: 8px 4px 8px 0;
+  position: absolute;
+  top: 0; */
 }
 
 .Voter {
-  margin: 10px;
+  /* position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%; */
+  margin-top: 20px;
+  padding-left: 15px;
+  height: 40%;
+  z-index: 4;
+  position: absolute;
 }
 
+/* .Voter { */
+/* align-items: center; */
+/* display: -ms-flexbox; */
+/* display: flex; */
+/* fill: inherit; */
+/* -ms-flex-direction: column; */
+/* flex-direction: column; */
+/* } */
+
 .commentLink {
-  display: inline;
+  /* display: block; */
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  padding-left: 30px;
+  padding-right: 30px;
+  padding-top: 30px;
+  padding-bottom: 15px;
+}
+
+.sort_by {
+  display: flex;
+  flex-direction: row;
+  margin: 10px;
+  padding-inline-start: 40px;
+  font-size: 18px;
+}
+
+.submitButton {
+  font-size: 18px;
+  /* display: inline; */
+  height: 27px;
+  border-radius: 4px;
+  margin-left: 8px;
+  border: 1px solid rgb(2, 181, 175);
+  text-align: center;
+  background-color: white;
+}
+
+.submitButton:hover {
+  background-color: rgb(2, 181, 175);
+  border-radius: 4px;
+}
+
+.submitButton:active {
+  /* background-color: #3e8e41; */
+  box-shadow: 0 3px #666;
+  transform: translateY(5px);
+}
+
+#sort_by {
+  width: 100px;
+  background-color: #fff;
+  margin-left: 5px;
+}
+
+.p {
+  margin: 15px;
+}
+
+.commentButton {
+  border-radius: 4px;
+  border: 1px solid rgb(2, 181, 175);
+  text-align: center;
+  background-color: white;
+  font-size: 14px;
+  margin-left: 211px;
+  padding-top: 2px;
+}
+
+.commentButton:hover {
+  background-color: rgb(2, 181, 175);
+  border-radius: 4px;
+}
+
+.commentButton:active {
+  /* background-color: #3e8e41; */
+  box-shadow: 0 3px #666;
+  transform: translateY(5px);
+}
+
+.commentP {
+  font-size: 14px;
+}
+
+.commentDelete {
+  border-radius: 4px;
+  border: 1px solid rgb(2, 181, 175);
+  text-align: center;
+  background-color: white;
+  font-size: 14px;
+  padding-top: 2px;
+  margin-left: 40px;
+  margin-top: 1px;
+}
+
+.commentDelete:hover {
+  background-color: rgb(2, 181, 175);
+  border-radius: 4px;
+}
+
+.commentDelete:active {
+  /* background-color: #3e8e41; */
+  box-shadow: 0 3px #666;
+  transform: translateY(5px);
+}
+
+.viewToggler {
+  margin-left: 40px;
+  margin-top: 20px;
+  border-radius: 4px;
+  border: 1px solid rgb(2, 181, 175);
+  text-align: center;
+  background-color: white;
+  font-size: 14px;
+  padding-top: 2px;
+}
+
+.viewToggler:hover {
+  background-color: rgb(2, 181, 175);
+  border-radius: 4px;
+}
+
+.viewToggler:active {
+  /* background-color: #3e8e41; */
+  box-shadow: 0 3px #666;
+  transform: translateY(5px);
+}
+
+.redditImg {
+  margin-top: 20px;
 }
