--- a/nc-daily-newsy/src/App.css
+++ b/nc-daily-newsy/src/App.css
@@ -11,6 +11,10 @@
   /* border: 4px solid red; */
 }
 
+@-ms-viewport {
+  width: device-width;
+}
+
 h1 {
   /* width: 100%;
   height: 200px; */
@@ -54,11 +58,12 @@ header {
 }
 
 .voteButton {
-  font-size: 100%;
+  /* font-size: 100%; */
   font-family: inherit;
-  border: 1px solid green;
-  padding: 0;
+  /* border: 1px solid green; */
+  /* padding: 0; */
   background-color: transparent;
+  border: transparent;
 }
 
 .voteButton:hover {
@@ -95,14 +100,34 @@ header {
   /* font-family: sans-serif Cursive; */
   text-align: left;
 }
-
-.Comments {
+.commentArticle {
+  display: grid;
+  grid-template-columns: 80% 20%;
+  grid-template-areas: "comments voterWrapper";
+  border: 1px solid grey;
   margin-left: 40px;
-  margin-right: 40px;
   margin-top: 25px;
   margin-bottom: 10px;
+  margin-right: 40px;
   padding: 15px;
-  border: 1px solid grey;
+}
+
+/* .articleWrapper {
+  display: grid;
+  grid-template-columns: 80% 20%;
+} */
+
+.Comments {
+  grid-area: comments;
+
+  margin-left: 20px;
+  /* margin-right: 40px; */
+  margin-top: 15px;
+  margin-bottom: 10px;
+  /* padding: 15px; */
+  margin-right: 15px;
+  /* padding-left: 10px; */
+  /* border: 1px solid grey; */
   border-radius: 3px;
   /* font-family: sans-serif Cursive; */
   text-align: left;
@@ -117,6 +142,7 @@ header {
   margin-left: 50px;
   margin-right: 50px;
   margin-bottom: 50px;
+  grid-area: article;
 }
 
 .Input {
@@ -148,33 +174,84 @@ header {
 
 .voterWrapper {
   /* -ms-flex-align: center; */
-  align-items: center;
-  box-sizing: border-box;
+  grid-area: voterWrapper;
+  /* border: 1px solid blue; */
+  /* align-items: center;
+  box-sizing: border-box; */
   /* display: -ms-flexbox; */
-  display: flex;
+  /* display: flex; */
   /* -ms-flex-direction: column; */
-  flex-direction: row-reverse;
+  /* flex-direction: row-reverse; */
   /* padding-bottom: 150px; */
   /* position: absolute; */
   /* padding: 8px 4px 8px 0; */
   /* height: 100%;
   left: 0;
-  padding: 8px 4px 8px 0;
+  padding: 8px 4px 8px 0;s
   position: absolute;
   top: 0; */
+  display: grid;
+  grid-template-rows: 50px 10px 50px;
+  grid-template-areas: "like" "likevotes" "dislike";
+  margin-right: 17px;
+  margin-bottom: 29px;
+  padding-bottom: 30px;
+}
+
+.Like {
+  grid-area: like;
+  margin-right: 56px;
+  padding-right: 56px;
+  background-color: transparent;
+  border: transparent;
+}
+
+.disLike {
+  grid-area: dislike;
+  margin-right: 56px;
+  padding-right: 56px;
+  /* padding-right: 10px;
+
+  margin-right: 20px; */
+  background-color: transparent;
+  border: transparent;
+}
+
+.likeVotes {
+  grid-area: likevotes;
+  margin-top: 10px;
+  margin-right: 100px;
+  /* text-align: center; */
+  display: flex;
+  justify-content: center;
+  align-content: center;
+}
+.singleVote {
+  padding-bottom: 50px;
+  display: flex;
+  flex-direction: row-reverse;
+
+  justify-content: flex-end;
 }
 
 .Voter {
+  margin-top: 23.8px;
+  padding-left: 10px;
+  /* border: 1px solid blue; */
+  /* display: flex; */
+  /* margin-left: 35px; */
+
+  /* flex-direction: row; */
   /* position: absolute;
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%; */
+  height: 100%;
   margin-top: 20px;
-  padding-left: 15px;
-  height: 40%;
-  z-index: 4;
-  position: absolute;
+  padding-left: 15px; */
+  /* height: 40%; */
+  /* z-index: 4;
+  position: absolute; */
 }
 
 /* .Voter { */
@@ -269,7 +346,7 @@ header {
   background-color: white;
   font-size: 14px;
   padding-top: 2px;
-  margin-left: 40px;
+  margin-left: 20px;
   margin-top: 1px;
 }
 
