--- a/nc-daily-newsy/src/App.css
+++ b/nc-daily-newsy/src/App.css
@@ -1,3 +1,135 @@
+@media (min-width: 768px) {
+  /* For desktop: */
+  .commentArticle {
+    max-width: 50%;
+    margin: 20px auto !important;
+  }
+  .form {
+    max-width: 50%;
+    margin: 20px auto !important;
+  }
+  .commentButton {
+    border-radius: 4px;
+    border: 1px solid rgb(2, 181, 175);
+    text-align: center;
+    background-color: white;
+    font-size: 14px;
+    padding-top: 2px;
+  }
+  .singleArticle {
+    max-width: 60%;
+    margin: 20px auto !important;
+  }
+  .viewToggler {
+    margin-left: 155px !important;
+    border-radius: 4px;
+    border: 1px solid rgb(2, 181, 175);
+
+    background-color: white;
+    font-size: 14px;
+    padding-top: 2px;
+    padding-bottom: 2px;
+  }
+}
+
+@media (min-width: 1024px) {
+  .viewToggler {
+    margin-left: 288px !important;
+    border-radius: 4px;
+    border: 1px solid rgb(2, 181, 175);
+    background-color: white;
+    font-size: 14px;
+    padding-top: 2px;
+    padding-bottom: 2px;
+  }
+  .commentButton {
+    /* max-width: 50%;*/
+    border-radius: 4px;
+    border: 1px solid rgb(2, 181, 175);
+    text-align: center;
+    background-color: white;
+    font-size: 14px;
+    padding-top: 2px;
+    margin-left: 100px !important;
+  }
+}
+@media (min-width: 320px) and (max-width: 370px) {
+  /* smartphones, portrait iPhone, portrait 480x320 phones (Android) */
+  .commentButton {
+    border-radius: 4px;
+    border: 1px solid rgb(2, 181, 175);
+    text-align: center;
+    background-color: white;
+    font-size: 14px;
+    margin-left: 105px !important;
+    padding-top: 2px;
+  }
+}
+@media (min-width: 375px) and (max-width: 420px) {
+  /* smartphones, Android phones, landscape iPhone */
+  .commentButton {
+    border-radius: 4px;
+    border: 1px solid rgb(2, 181, 175);
+    text-align: center;
+    background-color: white;
+    font-size: 14px;
+    margin-left: 120px !important;
+    padding-top: 2px;
+  }
+}
+
+@media (min-width: 425px) {
+  /* smartphones, Android phones, landscape iPhone */
+  .commentButton {
+    border-radius: 4px;
+    border: 1px solid rgb(2, 181, 175);
+    text-align: center;
+    background-color: white;
+    font-size: 14px;
+    margin-left: 133px !important;
+    padding-top: 2px;
+  }
+}
+
+@media (min-width: 768px) {
+  /* smartphones, Android phones, landscape iPhone */
+  .commentButton {
+    border-radius: 4px;
+    border: 1px solid rgb(2, 181, 175);
+    text-align: center;
+    background-color: white;
+    font-size: 14px;
+    margin-left: 308px !important;
+    padding-top: 2px;
+  }
+}
+
+@media (min-width: 1024px) {
+  /* smartphones, Android phones, landscape iPhone */
+  .commentButton {
+    border-radius: 4px;
+    border: 1px solid rgb(2, 181, 175);
+    text-align: center;
+    background-color: white;
+    font-size: 14px;
+    margin-left: 408px !important;
+    padding-top: 2px;
+  }
+}
+
+@media (min-width: 1440px) {
+  /* smartphones, Android phones, landscape iPhone */
+  .commentButton {
+    border-radius: 4px;
+    border: 1px solid rgb(2, 181, 175);
+    text-align: center;
+    background-color: white;
+    font-size: 14px;
+    margin-left: 556px !important;
+    padding-top: 2px;
+  }
+}
+
 .App {
   display: grid;
   grid-template-rows: 50px, 100px, 1fr, 50px;
@@ -99,17 +231,18 @@ header {
   border-radius: 3px;
   /* font-family: sans-serif Cursive; */
   text-align: left;
+  background-color: #f8f9fa;
 }
 .commentArticle {
   display: grid;
   grid-template-columns: 80% 20%;
   grid-template-areas: "comments voterWrapper";
   border: 1px solid grey;
-  margin-left: 40px;
+  margin-left: 30px;
   margin-top: 25px;
   margin-bottom: 10px;
-  margin-right: 40px;
-  padding: 15px;
+  margin-right: 25px;
+  padding: 20px;
 }
 
 /* .articleWrapper {
@@ -120,12 +253,10 @@ header {
 .Comments {
   grid-area: comments;
 
-  margin-left: 20px;
   /* margin-right: 40px; */
-  margin-top: 15px;
   margin-bottom: 10px;
   /* padding: 15px; */
-  margin-right: 15px;
+  margin-right: 10px;
   /* padding-left: 10px; */
   /* border: 1px solid grey; */
   border-radius: 3px;
@@ -139,10 +270,14 @@ header {
   /* border: 4px solid palevioletred; */
   /* background-color: #dae0e6; */
   background-color: #e3e5e8;
-  margin-left: 50px;
-  margin-right: 50px;
-  margin-bottom: 50px;
+  margin-left: 30px;
+  margin-right: 30px;
+  margin-bottom: 10px;
+  padding-bottom: 60px;
   grid-area: article;
+  display: grid;
+  grid-template-rows: 30% 20% 15% 30%;
+  grid-template-areas: "articleInfo" "h4" "commentLink" "articleCardVoter";
 }
 
 .Input {
@@ -173,46 +308,28 @@ header {
 }
 
 .voterWrapper {
-  /* -ms-flex-align: center; */
-  grid-area: voterWrapper;
-  /* border: 1px solid blue; */
-  /* align-items: center;
-  box-sizing: border-box; */
-  /* display: -ms-flexbox; */
-  /* display: flex; */
-  /* -ms-flex-direction: column; */
-  /* flex-direction: row-reverse; */
-  /* padding-bottom: 150px; */
-  /* position: absolute; */
-  /* padding: 8px 4px 8px 0; */
-  /* height: 100%;
-  left: 0;
-  padding: 8px 4px 8px 0;s
-  position: absolute;
-  top: 0; */
   display: grid;
   grid-template-rows: 50px 10px 50px;
   grid-template-areas: "like" "likevotes" "dislike";
-  margin-right: 17px;
+  margin-right: 50px;
   margin-bottom: 29px;
   padding-bottom: 30px;
 }
 
 .Like {
+  margin-top: 10px;
   grid-area: like;
   margin-right: 56px;
-  padding-right: 56px;
+  padding-right: 50px;
   background-color: transparent;
   border: transparent;
 }
 
 .disLike {
   grid-area: dislike;
-  margin-right: 56px;
-  padding-right: 56px;
-  /* padding-right: 10px;
-
-  margin-right: 20px; */
+  margin-right: 40px;
+  padding-right: 50px;
+  margin-bottom: 10px;
   background-color: transparent;
   border: transparent;
 }
@@ -220,48 +337,21 @@ header {
 .likeVotes {
   grid-area: likevotes;
   margin-top: 10px;
-  margin-right: 100px;
-  /* text-align: center; */
+  padding-right: 180px;
+  margin-left: 10px;
   display: flex;
   justify-content: center;
   align-content: center;
 }
+
 .singleVote {
-  padding-bottom: 50px;
+  padding-bottom: 30px;
+
   display: flex;
   flex-direction: row-reverse;
 
   justify-content: flex-end;
 }
-
-.Voter {
-  margin-top: 23.8px;
-  padding-left: 10px;
-  /* border: 1px solid blue; */
-  /* display: flex; */
-  /* margin-left: 35px; */
-
-  /* flex-direction: row; */
-  /* position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  margin-top: 20px;
-  padding-left: 15px; */
-  /* height: 40%; */
-  /* z-index: 4;
-  position: absolute; */
-}
-
-/* .Voter { */
-/* align-items: center; */
-/* display: -ms-flexbox; */
-/* display: flex; */
-/* fill: inherit; */
-/* -ms-flex-direction: column; */
-/* flex-direction: column; */
-/* } */
 
 .commentLink {
   /* display: block; */
@@ -270,7 +360,7 @@ header {
   justify-content: flex-start;
   padding-left: 30px;
   padding-right: 30px;
-  padding-top: 30px;
+  padding-top: 15px;
   padding-bottom: 15px;
 }
 
@@ -313,6 +403,9 @@ header {
 .p {
   margin: 15px;
 }
+.dIcon {
+  margin-right: 20px;
+}
 
 .commentButton {
   border-radius: 4px;
@@ -320,8 +413,8 @@ header {
   text-align: center;
   background-color: white;
   font-size: 14px;
-  margin-left: 211px;
   padding-top: 2px;
+  /* margin-left: 308px !important; */
 }
 
 .commentButton:hover {
@@ -346,7 +439,6 @@ header {
   background-color: white;
   font-size: 14px;
   padding-top: 2px;
-  margin-left: 20px;
   margin-top: 1px;
 }
 
@@ -362,7 +454,7 @@ header {
 }
 
 .viewToggler {
-  margin-left: 40px;
+  margin-left: 15px;
   margin-top: 20px;
   border-radius: 4px;
   border: 1px solid rgb(2, 181, 175);
@@ -385,4 +477,16 @@ header {
 
 .redditImg {
   margin-top: 20px;
+}
+
+.articleCardVoter {
+  background-color: lawngreen;
+  display: flex;
+  flex-direction: row-reverse;
+  margin-bottom: 40px;
+  padding-bottom: 5px;
+}
+
+p.disLike {
+  margin-left: 10px;
 }
