--- a/nc-daily-newsy/src/App.css
+++ b/nc-daily-newsy/src/App.css
@@ -4,10 +4,10 @@
     max-width: 50%;
     margin: 20px auto !important;
   }
-  .form {
+  /* .form {
     max-width: 50%;
     margin: 20px auto !important;
-  }
+  } */
   .commentButton {
     border-radius: 4px;
     border: 1px solid rgb(2, 181, 175);
@@ -15,6 +15,7 @@
     background-color: white;
     font-size: 14px;
     padding-top: 2px;
+    margin-right: 2.5rem;
   }
   .singleArticle {
     max-width: 60%;
@@ -78,22 +79,20 @@
     /* max-width: 50%;*/
     border-radius: 4px;
     border: 1px solid rgb(2, 181, 175);
-    text-align: center;
     background-color: white;
     font-size: 14px;
     padding-top: 2px;
-    margin-left: 100px !important;
   }
 }
-@media (min-width: 320px) and (max-width: 370px) {
+@media (max-width: 320px) {
   /* smartphones, portrait iPhone, portrait 480x320 phones (Android) */
   .commentButton {
     border-radius: 4px;
     border: 1px solid rgb(2, 181, 175);
-    text-align: center;
+
     background-color: white;
     font-size: 14px;
-    margin-left: 105px !important;
+    /* margin-left: 105px !important; */
     padding-top: 2px;
   }
   .articleCardVoter {
@@ -102,24 +101,24 @@
     margin-left: -18px;
   }
 }
-@media (min-width: 375px) and (max-width: 420px) {
-  /* smartphones, Android phones, landscape iPhone */
+@media (max-width: 375px) {
+  /* smartphones, portrait iPhone, portrait 480x320 phones (Android) */
   .commentButton {
     border-radius: 4px;
     border: 1px solid rgb(2, 181, 175);
     text-align: center;
     background-color: white;
     font-size: 14px;
-    margin-left: 120px !important;
+    margin-left: 5.6rem !important;
+    /* margin-left: 105px !important; */
     padding-top: 2px;
   }
   .articleCardVoter {
     background-color: transparent !important ;
     margin-bottom: 15px;
-    margin-left: -70px;
+    margin-left: -18px;
   }
 }
-
 @media (min-width: 425px) {
   /* smartphones, Android phones, landscape iPhone */
   .commentButton {
@@ -128,27 +127,14 @@
     text-align: center;
     background-color: white;
     font-size: 14px;
-    margin-left: 133px !important;
+    margin-left: 4.2rem;
+    /* margin-left: 120px !important; */
     padding-top: 2px;
   }
   .articleCardVoter {
     background-color: transparent !important ;
     margin-bottom: 15px;
-    margin-left: -16px;
-  }
-  .Article {
-    max-width: 60%;
-    margin: 20px auto !important;
-
-    background-color: #e3e5e8;
-    margin-left: 30px;
-    margin-right: 30px;
-    margin-bottom: 10px;
-    padding-bottom: 60px;
-    grid-area: article;
-    display: grid;
-    grid-template-rows: 30% 20% 15% 30%;
-    grid-template-areas: "articleInfo" "h4" "commentLink" "articleCardVoter";
+    margin-left: -70px;
   }
 }
 
@@ -160,7 +146,7 @@
     text-align: center;
     background-color: white;
     font-size: 14px;
-    margin-left: 308px !important;
+    /* margin-left: 308px !important; */
     padding-top: 2px;
   }
   .articleCardVoter {
@@ -168,19 +154,6 @@
     margin-bottom: -45px;
     text-align: justify;
     margin-left: 15px !important;
-  }
-}
-
-@media (min-width: 1024px) {
-  /* smartphones, Android phones, landscape iPhone */
-  .commentButton {
-    border-radius: 4px;
-    border: 1px solid rgb(2, 181, 175);
-    text-align: center;
-    background-color: white;
-    font-size: 14px;
-    margin-left: 516px !important;
-    padding-top: 2px;
   }
 }
 
@@ -192,7 +165,7 @@
     text-align: center;
     background-color: white;
     font-size: 14px;
-    margin-left: 556px !important;
+    /* margin-left: 556px !important; */
     padding-top: 2px;
   }
 }
@@ -368,11 +341,6 @@ header {
   margin: 15px;
 }
 
-.form {
-  margin: 15px;
-  display: flex;
-}
-
 .voterWrapper {
   display: grid;
   grid-template-rows: 50px 10px 50px;
@@ -482,10 +450,14 @@ header {
 .commentButton {
   border-radius: 4px;
   border: 1px solid rgb(2, 181, 175);
-  text-align: center;
+  /* text-align: center; */
   background-color: white;
   font-size: 14px;
   padding-top: 2px;
+  width: 25%;
+  align-self: center;
+  margin: auto;
+
   /* margin-left: 308px !important; */
 }
 
@@ -507,7 +479,6 @@ header {
 .commentDelete {
   border-radius: 4px;
   border: 1px solid rgb(2, 181, 175);
-  text-align: center;
   background-color: white;
   font-size: 14px;
   padding-top: 2px;
@@ -572,4 +543,28 @@ body {
 }
 .page-wrap {
   min-height: 100vh;
+}
+
+.formContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  /* max-width: 200px;
+  margin-left: 1rem;
+  margin-right: 1rem; */
+}
+
+.form {
+  align-self: center;
+  /* display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-content: flex-start; */
+
+  padding-top: 2rem;
+}
+
+textarea {
+  width: 50vw;
 }
